change to read file json

--- a/public/project.json
+++ b/public/project.json
@@ -2,7 +2,7 @@
     {
       "id": "1",
       "title": "Proyek 1",
-      "description": "Deskripsi lengkap tentang proyek 1. Proyek ini menggunakan teknologi terkini dan dirancang untuk memberikan pengalaman pengguna yang optimal.",
+      "description": "Sistem CRM berbasis web adalah solusi perangkat lunak yang dirancang untuk membantu organisasi dalam mengelola hubungan dengan pelanggan secara efektif dan efisien. Sistem ini menyediakan platform terpadu yang memungkinkan pengguna untuk mengakses dan mengelola informasi pelanggan, interaksi, dan proses bisnis dari mana saja dan kapan saja, selama terhubung ke internet.",
       "link": "https://link-ke-proyek1.com",
       "images": [
         "https://images.cakeresume.com/post-images/bf6986f0-b917-4c45-a064-b0fa70019f1b.png",
@@ -15,7 +15,7 @@
     {
       "id": "2",
       "title": "Proyek Pengadaan Barang",
-      "description": "Deskripsi lengkap tentang proyek 2. Proyek ini dirancang untuk memberikan solusi yang inovatif.",
+      "description": "Sistem pengadaan barang adalah sebuah platform terintegrasi yang dirancang untuk memfasilitasi dan mengelola proses pengadaan barang secara efisien dan transparan. Sistem ini bertujuan untuk meningkatkan efisiensi operasional dalam pengadaan barang, mengurangi biaya, dan mempercepat waktu pengadaan, sehingga organisasi dapat memenuhi kebutuhan material dan layanan dengan lebih baik.",
       "link": "https://link-ke-proyek2.com",
       "images": [
         "https://images.cakeresume.com/post-images/99854697-6b2c-484f-95df-4c6c34bc77dc.png",
