--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.4",
+    "@next/third-parties": "^14.2.5",
     "i18next": "^23.12.2",
     "i18next-resources-to-backend": "^1.2.1",
     "negotiator": "^0.6.3",
