--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+     "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.4",
@@ -16,6 +17,7 @@
     "negotiator": "^0.6.3",
     "next": "14.2.5",
     "next-i18next": "^15.3.1",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.0.1",
