--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-     "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.4",
     "@next/third-parties": "^14.2.5",
+    "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "i18next": "^23.12.2",
     "i18next-resources-to-backend": "^1.2.1",
     "negotiator": "^0.6.3",
@@ -19,6 +21,7 @@
     "next-i18next": "^15.3.1",
     "next-sitemap": "^4.2.3",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
     "react-i18next": "^15.0.1",
     "swiper": "^11.1.9"
