--- a/public/project.json
+++ b/public/project.json
@@ -7,7 +7,16 @@
       "images": [
         "https://images.cakeresume.com/post-images/bf6986f0-b917-4c45-a064-b0fa70019f1b.png",
         "https://images.cakeresume.com/post-images/28907077-8ef9-4ab4-a652-5e01fac5f64d.png",
-        "https://images.cakeresume.com/post-images/9a5acd6f-f9c7-4c87-802f-a57b072c095e.png"
+        "https://images.cakeresume.com/post-images/9a5acd6f-f9c7-4c87-802f-a57b072c095e.png",
+        "https://images.cakeresume.com/post-images/bf6986f0-b917-4c45-a064-b0fa70019f1b.png",
+        "https://images.cakeresume.com/post-images/28907077-8ef9-4ab4-a652-5e01fac5f64d.png",
+        "https://images.cakeresume.com/post-images/b22ae55d-2299-4702-8c65-2ff8880338d1.png",
+        "https://images.cakeresume.com/post-images/843aeb36-feef-40fc-8a47-8107219f391a.png",
+        "https://images.cakeresume.com/post-images/416ee1b6-6c67-4d3a-86fc-08c453621452.png",
+        "https://images.cakeresume.com/post-images/51e60b21-cd28-4955-aad5-9d56ddc3729a.png",
+        "https://images.cakeresume.com/post-images/44249f5e-d0c8-4e42-a534-c30f6c747a97.png",
+        "https://images.cakeresume.com/post-images/c9a2026e-99c7-4ddc-a2d5-abb5b6b8462b.png",
+        "https://images.cakeresume.com/post-images/503e14fa-2fb7-4e29-b752-7ae656a33aaa.png"
       ],
       "technologies": ["Vuejs", "Bootstrap", "Laravel", "Firebase", "Microservice", "JWT Token"],
       "repo": "https://github.com/amirrdn",
@@ -32,7 +41,17 @@
       "images": [
         "https://images.cakeresume.com/post-images/99854697-6b2c-484f-95df-4c6c34bc77dc.png",
         "https://images.cakeresume.com/post-images/6d310b98-7c2f-4f99-a590-2926c0a3958c.png",
-        "https://images.cakeresume.com/post-images/b6eb8b34-400c-470c-8ca5-ccaca0805885.png"
+        "https://images.cakeresume.com/post-images/b6eb8b34-400c-470c-8ca5-ccaca0805885.png",
+        "https://images.cakeresume.com/post-images/dc1ddbbc-bbb5-4646-8806-5ca7234915bd.png",
+        "https://images.cakeresume.com/post-images/f45bbe83-9abf-4904-b1f4-4e81e0f3e9dc.png",
+        "https://images.cakeresume.com/post-images/cd6fac99-30de-495f-b3f7-c0bc4afe30b1.png",
+        "https://images.cakeresume.com/post-images/79ce58a5-e118-47c5-b215-3add0c3d6128.png",
+        "https://images.cakeresume.com/post-images/33e0b1c1-4bb7-4eaa-905d-9e32b7b321c3.png",
+        "https://images.cakeresume.com/post-images/31ecae60-b230-4020-82d7-bd0dcf7a1e86.png",
+        "https://images.cakeresume.com/post-images/4462546c-a25f-414e-89e5-0a3df0e81483.png",
+        "https://images.cakeresume.com/post-images/adc79645-5bf3-4e34-92e3-d2ed3a884161.png",
+        "https://images.cakeresume.com/post-images/57fa1f62-d345-443a-8cc9-c124e9f2d0da.png",
+        "https://images.cakeresume.com/post-images/cd03b0fc-109d-420a-9e3d-89ed64b4e152.png"
       ],
       "technologies": ["Reactjs", "Tailwind CSS", "Express", "Typescript", "Whatssapp Apit"],
       "repo": "https://github.com/amirrdn",
@@ -60,7 +79,19 @@
         "https://images.cakeresume.com/post-images/3a6d36c7-633e-43a8-b3a3-a2f3f5556140.png",
         "https://images.cakeresume.com/post-images/504bb3ef-5a36-454c-8b7e-3e046f795d06.png",
         "https://images.cakeresume.com/post-images/1113caf7-ca32-44f1-b97e-0a66d48009d4.png",
-        "https://images.cakeresume.com/post-images/edead885-f307-471c-b9e8-b40fbec65f5f.png"
+        "https://images.cakeresume.com/post-images/edead885-f307-471c-b9e8-b40fbec65f5f.png",
+        "https://images.cakeresume.com/post-images/a0f6653c-1f8b-40f6-81cb-2376eec71d31.png",
+        "https://images.cakeresume.com/post-images/3deee50d-37da-491d-b429-8b45354e937f.png",
+        "https://images.cakeresume.com/post-images/9be8eb07-4f25-4fc1-828d-d3d0dd1ae3d9.png",
+        "https://images.cakeresume.com/post-images/f8328bd6-d6a9-43cf-95ad-5b1508319922.png",
+        "https://images.cakeresume.com/post-images/f42b0e4e-6bdc-4e4c-b3a4-a7e5d4b519be.png",
+        "https://images.cakeresume.com/post-images/c1aefb7e-d798-4ffe-ac23-e14f2d93b59e.png",
+        "https://images.cakeresume.com/post-images/2eb8c9bf-6032-4bc0-b231-97c630916ce9.png",
+        "https://images.cakeresume.com/post-images/d7d9b8d1-112d-476e-8705-c94b5ad56553.png",
+        "https://images.cakeresume.com/post-images/519d555e-c97b-4373-aa06-47a5abfd88a5.png",
+        "https://images.cakeresume.com/post-images/6a9feadb-67be-499d-b66f-811566ee830a.png",
+        "https://images.cakeresume.com/post-images/dce0c11f-20db-4978-972c-6eada0f0c9ee.png",
+        "https://images.cakeresume.com/post-images/e7046c57-a142-4ee8-bcca-5f8a90f1f03b.png"
       ],
       "technologies": ["Javascript", "Bootstrap", "Flutter"],
       "repo": "https://github.com/amirrdn",
@@ -73,6 +104,42 @@
         {
           "id": "en",
           "title": "Warehouse Web Based",
+          "text": "The application has an Easy POS system for a faster billing system. A very responsive web template has been used, the application contains complete source code and is easy to modify it as per your needs. The application can be ready to install on the local computer or on an online server with an easy installation process."
+        }
+      ]
+    },
+    {
+      "id": "4",
+      "title": "Warehouse Android",
+      "description": "The application has an Easy POS system for a faster billing system. A very responsive web template has been used, the application contains complete source code and is easy to modify it as per your needs. The application can be ready to install on the local computer or on an online server with an easy installation process.",
+      "link": "https://link-ke-proyek3.com",
+      "images": [
+        "https://images.cakeresume.com/post-images/79eb1bed-5bb4-4a57-86df-e90a3dda93d5.png",
+        "https://images.cakeresume.com/post-images/88f413c1-19a9-4190-aa48-14cd2b99f832.png",
+        "https://images.cakeresume.com/post-images/2e97bffb-3bce-4665-9724-278f6798cc91.png",
+        "https://images.cakeresume.com/post-images/2a72650e-f9fc-4b94-bc9e-bcd85bb1f645.png",
+        "https://images.cakeresume.com/post-images/46fea4bf-8728-4c11-89bb-0d54b9aadafd.png",
+        "https://images.cakeresume.com/post-images/681769d7-2c97-442d-826d-7c1a39600397.png",
+        "https://images.cakeresume.com/post-images/d539ed9c-b91e-4946-91bc-f3fc4c2dc0dc.png",
+        "https://images.cakeresume.com/post-images/79fd2967-0312-485c-98c4-7331f2a74648.png",
+        "https://images.cakeresume.com/post-images/b6f41a7a-4abe-4a38-b16b-cbb3b1a8ab79.png",
+        "https://images.cakeresume.com/post-images/993f339a-3054-489c-8c2f-417de171865f.png",
+        "https://images.cakeresume.com/post-images/dc2e1256-ec1f-418b-b2a2-7e716bf77bae.png",
+        "https://images.cakeresume.com/post-images/c3fff081-2732-41d2-8254-84d936ac12c1.png",
+        "https://images.cakeresume.com/post-images/0e4b5c67-af24-40a7-853f-1570b56c7b5f.png",
+        "https://images.cakeresume.com/post-images/15b48f8c-e23c-438f-834f-e742954c5cb2.png"
+      ],
+      "technologies": ["Flutter", "Laravel"],
+      "repo": "https://github.com/amirrdn",
+      "locales": [
+        {
+          "id": "id",
+          "title": "Gudang Android",
+          "text": "Aplikasi ini memiliki sistem Easy POS untuk sistem penagihan yang lebih cepat. Templat web yang sangat responsif telah digunakan, aplikasi berisi kode sumber lengkap dan mudah untuk dimodifikasi sesuai kebutuhan Anda. Aplikasi dapat siap diinstal di komputer lokal atau di server online dengan proses instalasi yang mudah."
+        },
+        {
+          "id": "en",
+          "title": "Warehouse Android",
           "text": "The application has an Easy POS system for a faster billing system. A very responsive web template has been used, the application contains complete source code and is easy to modify it as per your needs. The application can be ready to install on the local computer or on an online server with an easy installation process."
         }
       ]
