--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 NEXT_PUBLIC_GA_ID=b_nI_39rSkLwRaQHd4Z7PqVxR4JmDo25UABtmJ0R5gU
 URL='https://amir-rudin-portofolio.vercel.app'
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCj9QlIpoanlz3DM5cq7Y6MkacBKK6bgYQ
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=amirrdn-8a33b.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=amirrdn-8a33b
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=amirrdn-8a33b.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1031265476429
+NEXT_PUBLIC_FIREBASE_APP_ID=G-35YEH083BT
