--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/third-parties": "^14.2.5",
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
+    "firebase": "^10.13.0",
     "i18next": "^23.12.2",
     "i18next-resources-to-backend": "^1.2.1",
     "negotiator": "^0.6.3",
@@ -27,6 +28,7 @@
     "swiper": "^11.1.9"
   },
   "devDependencies": {
+    "@types/firebase": "^2.4.32",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
